기능구현 끝

--- a/app/src/main/res/layout/fragment_tab_today.xml
+++ b/app/src/main/res/layout/fragment_tab_today.xml
@@ -16,9 +16,13 @@
         android:padding="8dp"
         android:background="#FF3F3F3F"
         android:gravity="center"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/today_recyclerView"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/today_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
 </LinearLayout>
