--- a/app/src/main/res/layout/korean_food.xml
+++ b/app/src/main/res/layout/korean_food.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="상세 보기" />
+            android:text="간단 설명" />
 
         <TextView
             android:id="@+id/textView3"
