--- a/app/src/main/res/layout/fragment_doinjangjjigae.xml
+++ b/app/src/main/res/layout/fragment_doinjangjjigae.xml
@@ -21,14 +21,16 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:src="@drawable/flagofchina" />
+                android:src="@drawable/flagofglobal" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="김치찌개" />
+                android:text="된장찌개"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="406dp"
@@ -39,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="분량\n4인분" />
+                    android:text="분량\n3인분" />
 
                 <TextView
                     android:layout_width="wrap_content"
